# readme-forge

./: .gitignore  README.md  pyproject.toml  readme-forge.json
roadmap/01-core-functionality/: 01-detailed-readme-template.md  02-interactive-cli-tool.md
roadmap/02-advanced-features/: 01-conditional-sections.md  02-license-generation.md  03-contributing-guide-generation.md  04-package-publishing.md
roadmap/03-integrations/: 01-github-actions-integration.md  02-ide-extension.md
roadmap/04-community-and-support/: 01-documentation-website.md  02-contribution-guidelines.md
src/readme_forge/: README_TEMPLATE.md  __init__.py  badges.py  git_utils.py  licenses.py  main.py  templates.py  tui.py
