[tool.poetry]
name = "readme-forge"
version = "0.1.0"
description = "A tool to generate beautiful and effective READMEs."
authors = ["Jules <jules@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
questionary = "^1.10"
jinja2 = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
