[tool.poetry]
name = "readme-forge"
version = "0.2.0"
description = "A powerful tool to generate beautiful and effective READMEs with an interactive TUI."
authors = ["Jules <jules@example.com>"]
readme = "README.md"
license = "MIT"
keywords = ["readme", "generator", "documentation", "cli", "tui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"
questionary = "^1.10"
jinja2 = "^3.0"
rich = "^13.0"
textual = "^0.45"
gitpython = "^3.1"
requests = "^2.31"

[tool.poetry.scripts]
readme-forge = "readme_forge.main:cli"
forge = "readme_forge.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
